# acs-bitaxe-lcd-800x480

./: .gitignore  CMakeLists.txt  README.md  custom_8MB_3MB_spiffs.csv  platformio.ini  sdkconfig  sdkconfig.defaults
DOCS/: QUICKSTARTGUIDE.md  USERGUIDE.md
Firmware_Versions/: README.md  v0.1.1-prerelease-Jade
backuplvgldrivers/: lv_conf.h  lvgl_port_v8.cpp
data/: test.txt
include/: BAP.h  Clock.h  I2CData.h  NVS.h  UIHandler.h  UIScreens.h  UISharedAssets.h  UIThemes.h  fonts.h  httpServer.h  initialSetupScreen.h  lv_conf.h  lvgl_port_v8.h  mempoolAPI.h  modelConfig.h  modelPresets.h  spiffsDriver.h  wifiFeatures.h
main/: BAP.cpp  CMakeLists.txt  Clock.cpp  I2CData.cpp  NVS.cpp  UIHandler.cpp  UIScreens.cpp  UISharedAssets.cpp  UIThemes.cpp  httpServer.cpp  idf_component.yml  initialSetupScreen.cpp  interExtraBold144.c  interExtraBold32.c  interExtraBold56.c  interExtraBold72.c  interMedium16.c  interMedium16_19px (1).c  interMedium24.c  lvgl_port_v8.h  main.cpp  mempoolAPI.c  modelPresets.cpp  spiffsDriver.cpp  wifiFeatures.cpp
src/: I2CData.cpp  UIHandler.cpp  UIScreens.cpp  UISharedAssets.cpp  interExtraBold32.c  interExtraBold56.c  interMedium16.c  interMedium16_19px (1).c  interMedium24.c  main.cpp  spiffsDriver.cpp
